Fixed italics not showing.

--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
     text-align: center;
     font-family: "Recursive", sans-serif;
     font-weight: 350;
-    font-variation-settings: "CASL" 0.25, "slnt" 0, "CRSV" 1;
+    font-variation-settings: "CASL" 0.25, "CRSV" 1;
 }
 
 body {
